[package]
name = "gestured"
version = "0.0.0"
edition = "2021"
author = "Richard Anaya"
description = "Gesture daemon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input="0.7"
libc="0.2"
clap = { version = "3.0.12", features = ["derive"] }
shlex = "1"